Added search hint endpoint
- created Spring Boot application
- added /v1/search/hint endpoint
- added fetching images from Wikibooks API
- added Docker service for backend server
- updated /v1/search/hint endpoint with optional hintCount parameter
